2013-06-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-process-text-input): Display passwords as asterisks.

	* shr.el (shr-make-table-1): Protect against invalid column-spans.

2013-06-19  Tom Tromey  <tromey@redhat.com>

	* eww.el (eww-top-url): Remove.
	(eww-home-url, eww-start-url, eww-contents-url): New defvars.
	(eww-render): Set new variables.  Don't set eww-top-url.
	(eww-handle-link): Handle "prev", "home", and "contents".
	Downcase the rel text.
	(eww-top-url): Choose best top URL.

2013-06-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el: Rewrite to implement form elements "by hand" instead of
	relying in widget.el.  Using widget.el leads to too many
	user interface inconsistencies.
	(eww-self-insert): Implement entering commands in text fields.
	(eww-process-text-input): New function to make text input field editing
	work.
	(eww-submit): Rewrite to use the new-style form methods.
	(eww-select-display): Display the correct selected item.
	(eww-change-select): Implement changing the select value.
	(eww-toggle-checkbox): Implement radio/checkboxes.
	(eww-update-field): Fix compilation error.
	(eww-tag-textarea): Implement <textarea>.

	* shr.el (shr-urlify): Use `keymap' instead of `local-map' so that we
	don't shadow mode-specific bindings.

	* eww.el (eww-browse-url): Don't push stuff onto history if there's
	nothing to push.

	* shr.el (shr-map): Bind [down-mouse-1] to browse URLs.

2013-06-19  Glenn Morris  <rgm@gnu.org>

	* gnus-group.el (gnus-mark-article-as-read): Fix declaration.

2013-06-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-netrc-parse-entries): Remove debugging.

2013-06-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-make-table-1): Implement <td rowspan>.
	(shr-table-horizontal-line): Allow nil as a value, and change the
	default.
	(shr-insert-table-ruler): Respect the nil value.

2013-06-18  Tom Tromey  <tromey@barimba>
