@@ -1,3 +1,7 @@
+2013-06-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* eww.el (eww-update-header-line-format): Quote % characters.
+
 2013-06-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* eww.el (eww-process-text-input): Display passwords as asterisks.
